Finishing the register user module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
-        <activity android:name=".View.RegisterUserSecondStepActivity"></activity>
+        <activity
+            android:name=".View.HomeActivity"
+            android:label="@string/title_activity_home"></activity>
+        <activity android:name=".View.RegisterUserSecondStepActivity" />
         <activity android:name=".View.RegisterUserActivity" />
         <activity android:name=".View.MainActivity">
             <intent-filter>
