--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
+        <activity android:name=".Toolbar_main"></activity>
         <activity
             android:name=".View.HomeActivity"
-            android:label="@string/title_activity_home"></activity>
+            android:label="@string/title_activity_home" />
         <activity android:name=".View.RegisterUserSecondStepActivity" />
         <activity android:name=".View.RegisterUserActivity" />
         <activity android:name=".View.MainActivity">
