--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha07"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
 
