--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.kenglxn.QRGen:android:2.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha07"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
