--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
 
 dependencies {
 
+    implementation "androidx.work:work-runtime:2.0.1"
+
+
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
