--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
+        <provider
+            android:name="androidx.work.impl.WorkManagerInitializer"
+            android:authorities="com.sample.workmanager-init"
+            android:enabled="true"/>
         <activity
             android:name=".View.EditUserActivity"
             android:label="@string/title_activity_edit_user"></activity>
