--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
 
     }
     buildTypes {
@@ -26,7 +25,7 @@ android {
 dependencies {
 
     implementation "androidx.work:work-runtime:2.0.1"
-
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
