--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
 
     implementation "androidx.work:work-runtime:2.0.1"
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation "com.google.android.gms:play-services-auth:16.0.1"
 
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
