--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:node="replace">
+        <activity android:name=".View.Activities.ConfigurationActivity"></activity>
         <activity
             android:name=".View.Activities.WithdrawActivity"
-            android:label="@string/title_activity_withdraw"></activity>
+            android:label="@string/title_activity_withdraw" />
 
         <meta-data
             android:name="com.google.android.gms.version"
