--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
 
-    implementation "androidx.work:work-runtime:2.0.1"
+    implementation "android.arch.work:work-runtime:1.0.0-alpha04"
     implementation "com.google.android.gms:play-services-auth:16.0.1"
     implementation "com.cleveroad:adaptivetablelayout:1.2.1"
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
