--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.app.bit"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation "android.arch.work:work-runtime:1.0.0-alpha04"
+    implementation 'androidx.work:work-runtime:2.1.0-alpha01'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.cleveroad:adaptivetablelayout:1.2.1'
     implementation 'androidx.room:room-runtime:2.1.0-alpha07'
